--- a/RecordProcessorTest/RecordProcessorTest.csproj
+++ b/RecordProcessorTest/RecordProcessorTest.csproj
@@ -8,9 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="System.IO.Abstractions" Version="13.2.47" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="13.2.47" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RecordProcesssor\RecordProcesssor.csproj" />
   </ItemGroup>
 
 </Project>
