--- a/RecordProcesssor/packages.config
+++ b/RecordProcesssor/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DynamicQuery" version="1.0" targetFramework="net472" />
   <package id="System.IO.Abstractions" version="13.2.47" targetFramework="net472" />
 </packages>
