Create a service project so the service layer code can be shared between WebApi and Console app Better organized the solution

--- a/RecordProcessorTest/RecordProcessorTest.csproj
+++ b/RecordProcessorTest/RecordProcessorTest.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RecordProcesssor\RecordProcesssor.csproj" />
+    <ProjectReference Include="..\RecordProcesssor\PersonRecordConsole.csproj" />
   </ItemGroup>
 
 </Project>
