--- a/GRWebApi/GRWebApi.csproj
+++ b/GRWebApi/GRWebApi.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RecordProcesssor\RecordProcesssor.csproj" />
+    <ProjectReference Include="..\PersonRecordService\PersonRecordService.csproj" />
   </ItemGroup>
 
 
