Create IRecordRepository interface and refactor the RecordProcessor to be FileRecordRepository which will be used by Console App Fix all the UnitTests

--- a/PersonRecordService/PersonRecordService.csproj
+++ b/PersonRecordService/PersonRecordService.csproj
@@ -47,10 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IRecordRepository.cs" />
     <Compile Include="Model\PersonRecord.cs" />
     <Compile Include="Model\SeparatorType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecordProcessor.cs" />
+    <Compile Include="FileRecordRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
