--- a/PersonRecordService/PersonRecordService.csproj
+++ b/PersonRecordService/PersonRecordService.csproj
@@ -47,11 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicRecordRepository.cs" />
     <Compile Include="Interfaces\IRecordRepository.cs" />
     <Compile Include="Model\PersonRecord.cs" />
     <Compile Include="Model\SeparatorType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileRecordRepository.cs" />
+    <Compile Include="RecordRepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
